// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title component shoud render Title with props 1`] = `
<h1
  className="title"
>
  My title
</h1>
`;

exports[`Title component shoud render Title without props 1`] = `
<h1
  className="title"
>
  Simple title
</h1>
`;
